--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.0"]
-
-[tool]
 [tool.poetry]
-authors = ["Your Name <you@example.com>"]
-name = "repl_python3_The-Turing-Test-L5CSY-DJH-4"
+name = "the-turing-test-l5csy-djh-4"
 version = "0.1.0"
+description = ""
+authors = ["virgile-ae <<>>"]
+
 [tool.poetry.dependencies]
-openai = "^0.15.0"
 python = "^3.8"
+openai = "^0.15.0"
+
 [tool.poetry.dev-dependencies]
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
